All/fix ie scrollbar (#80)
* fix ie scrollbar

* untrack css files

--- a/PFML/ContributionCalculator/src/css/_layout.scss
+++ b/PFML/ContributionCalculator/src/css/_layout.scss
@@ -19,9 +19,7 @@ body {
   color: $c-font-base;
   font-family: "Texta", "Helvetica", "Arial", "sans-serif";
   font-weight: 400;
-  // for IE weirdness
-  -ms-overflow-style: none;
-
+  
   // .translated-rtl & {
   //   direction: rtl;
   // }
